parser/tests/bad/expr06.st
% operand of 'arithmetic' operation must have type 'int' or 'real'

const i := 1 + true
